[gd_scene load_steps=22 format=2]

[ext_resource path="res://Entities/Gravedigger/GraveDigger.gd" type="Script" id=1]
[ext_resource path="res://Entities/Gravedigger/Animations/gravedigger_idle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Gravedigger/Animations/ gravedigger_smash.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Gravedigger/Animations/gravedigger_swipe.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Gravedigger/Animations/gravedigger_walk.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Gravedigger/Animations/gravedigger_dig.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Gravedigger/speech.ogg" type="AudioStream" id=7]
[ext_resource path="res://Entities/Gravedigger/Animations/shockwave.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sounds/hurt.wav" type="AudioStream" id=9]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.036, 1.12512, 1.036 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
scale = 3.0
scale_random = 1.0

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 1, 0.925, 0.7, 0.313726 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 1, 0.631373, 0.372549, 0.313726 )

[sub_resource type="SphereMesh" id=7]
material = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 0.992157, 0.870588, 0.521569, 0.313726 )

[sub_resource type="SphereMesh" id=9]
material = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 0.27451, 0.203922, 0.290196, 0.313726 )

[sub_resource type="SphereMesh" id=11]
material = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
albedo_color = Color( 0.105882, 0.12549, 0.196078, 0.313726 )

[sub_resource type="SphereMesh" id=13]
material = SubResource( 12 )

[node name="Gravedigger" type="KinematicBody"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, 3.01959, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
skeleton = NodePath("")

[node name="gravedigger_smash" parent="MeshInstance" instance=ExtResource( 3 )]
transform = Transform( -2.18557e-08, 5.32907e-15, 0.5, -0.5, -2.18557e-08, -2.18557e-08, 2.18557e-08, -0.5, 6.28441e-15, 0, 0, 0 )

[node name="gravedigger_dig" parent="MeshInstance" instance=ExtResource( 6 )]
transform = Transform( -2.18557e-08, 5.32907e-15, 0.5, -0.5, -2.18557e-08, -2.18557e-08, 2.18557e-08, -0.5, 6.28441e-15, 0, 0, 0 )

[node name="gravedigger_idle" parent="MeshInstance" instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 5.32907e-15, 0.5, -0.5, -2.18557e-08, -2.18557e-08, 2.18557e-08, -0.5, 6.28441e-15, 0, 0, 0 )

[node name="gravedigger_swipe" parent="MeshInstance" instance=ExtResource( 4 )]
transform = Transform( -2.18557e-08, 5.32907e-15, 0.5, -0.5, -2.18557e-08, -2.18557e-08, 2.18557e-08, -0.5, 6.28441e-15, 0, 0, 0 )

[node name="gravedigger_walk" parent="MeshInstance" instance=ExtResource( 5 )]
transform = Transform( -2.18557e-08, 5.32907e-15, 0.5, -0.5, -2.18557e-08, -2.18557e-08, 2.18557e-08, -0.5, 6.28441e-15, 0, 0, 0 )

[node name="shockwave" parent="MeshInstance" instance=ExtResource( 8 )]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, -4.37114e-08, -1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2.5, 0 )
emitting = false
amount = 25
lifetime = 2.5
one_shot = true
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Particles2" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )
emitting = false
amount = 25
lifetime = 2.5
one_shot = true
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 7 )

[node name="Particles3" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )
emitting = false
amount = 25
lifetime = 2.5
one_shot = true
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 9 )

[node name="Particles4" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )
emitting = false
amount = 25
lifetime = 2.5
one_shot = true
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 11 )

[node name="Particles5" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )
emitting = false
amount = 25
lifetime = 2.5
one_shot = true
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 13 )

[node name="HurtAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 25.0

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
